实现家庭理财管理，可以支持指定理财计划，可以支持多种类型：储蓄、股票。股票需要支持正股和期权。以股票为例，我在计划里设定某个（或者多个）股票的计划买入价格、计划卖出价格、计划操作数量。同时我也可以针对计划做兑现管理，一次兑现操作的数量一般都